--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
           aws-region: ap-southeast-1
       - name: Copy files to S3 with the AWS CLI
         run: |
-          aws s3 sync ./out s3://pens-reactclient"/
+          aws s3 sync ./out s3://pens-reactclient/
